example/mutating_admission_webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
  kind: MutatingWebhookConfiguration 
  metadata:
    name: namespace-mutator 
  webhooks:
  - name: nc-server.myproject.svc
    clientConfig: 
      service:
        namespace: default 
        name: webhooks
       path: "/this_is_a_path" 
       url: "http://nc-server.myproject.svc/this_is_a_path"
       caBundle: ""
    rules: 
    - operations: 
      - CREATE
      apiGroups:
      - ""
      apiVersions:
      - "*"
      resources:
      - namespaces
    failurePolicy: Fail
